// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomInput should render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 5,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "margin": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": 5,
        "width": "90%",
      }
    }
  >
    <TextInput
      keyboardType="numeric"
      multiline={true}
      onChangeText={[Function]}
      placeholder="Enter a number here (DAI)"
      style={
        Array [
          Object {
            "flexDirection": "row",
            "marginHorizontal": 3,
            "marginVertical": 5,
            "paddingBottom": 0,
            "paddingTop": 0,
          },
        ]
      }
      value="115,792,089,237,316,195,423,570,985,008,687,907,853,269,984,665,640,564,039,457.584,007,913,129,639,936"
    />
  </View>
  <Text
    onPress={[Function]}
    style={
      Object {
        "color": "#535A61",
        "fontSize": 14,
      }
    }
  >
    Max
  </Text>
</View>
`;

exports[`CustomInput should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 5,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "margin": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": 5,
        "width": "90%",
      }
    }
  >
    <TextInput
      keyboardType="numeric"
      multiline={true}
      onChangeText={[Function]}
      placeholder="Enter a number here (DAI)"
      style={
        Array [
          Object {
            "flexDirection": "row",
            "marginHorizontal": 3,
            "marginVertical": 5,
            "paddingBottom": 0,
            "paddingTop": 0,
          },
        ]
      }
      value="115,792,089,237,316,195,423,570,985,008,687,907,853,269,984,665,640,564,039,457.584,007,913,129,639,936"
    />
  </View>
  <Text
    onPress={[Function]}
    style={
      Object {
        "color": "#535A61",
        "fontSize": 14,
      }
    }
  >
    Max
  </Text>
</View>
`;

exports[`CustomInput should render correctly when defaultValue is not provided 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 5,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "margin": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": 5,
        "width": "90%",
      }
    }
  >
    <TextInput
      keyboardType="numeric"
      multiline={true}
      onChangeText={[Function]}
      placeholder="Enter a number here (DAI)"
      style={
        Array [
          Object {
            "flexDirection": "row",
            "marginHorizontal": 3,
            "marginVertical": 5,
            "paddingBottom": 0,
            "paddingTop": 0,
          },
        ]
      }
      value=""
    />
  </View>
  <Text
    onPress={[Function]}
    style={
      Object {
        "color": "#535A61",
        "fontSize": 14,
      }
    }
  >
    Max
  </Text>
</View>
`;
